# Learn-OpenGL

./: .gitignore
HelloWorld/: CMakeLists.txt  run.sh
HelloWorld/include/: camera.h  common_includes.h  dawn_engine.h  dawn_shader_program.h  dawn_ui_manager.h  dawn_ui_system.h  example.h  game_object.h  hello_world_app.h  helloworld_ui_system.h  light.h  material.h  opengl_shader_program.h  render_window.h  shader_uniform_variable.h  stb_image.h  transform.h
HelloWorld/includes/: camera.h  common_includes.h  dawn_engine.h  dawn_shader_program.h  game_object.h  hello_world_app.h  light.h  material.h  module.h  render_window.h  shader_uniform_variable.h  stb_image.h
HelloWorld/includes/glad/: glad.h
HelloWorld/shaders/: blinn_phong_rendering.frag  default_rendering.frag  default_rendering.vert  depth_buffer_rendering.frag  light.fs  light.vs  line_renderer.frag  line_renderer.vert  model.frag  simple_depth_map.frag  simple_depth_map.vert  skybox.frag  skybox.vert  tri.frag  tri.fs  tri.vert  tri.vs
HelloWorld/src/: camera.cpp  dawn_engine.cpp  dawn_shader_program.cpp  dawn_ui_manager.cpp  dawn_ui_system.cpp  game_object.cpp  glad.c  hello_world_app.cpp  helloworld_ui_system.cpp  light.cpp  main.cpp  material.cpp  module.cpp  opengl_shader_program.cpp  render_window.cpp  shader_uniform_variable.cpp  transform_module.cpp
HelloWorld/src/behaviour_modules/: behavior_module.cpp  behavior_module.h  behaviour_module.cpp  behaviour_module.h  box_block.cpp  box_block.h  reflect_member.h
HelloWorld/src/core/: CMakeLists.txt  camera.cpp  camera.h  dawn_engine.cpp  dawn_engine.h  dawn_material.cpp  dawn_material.h  dawn_mesh.cpp  dawn_mesh.h  dawn_model.cpp  dawn_model.h  dawn_texture.cpp  dawn_texture.h  dawn_ui_system.cpp  dawn_ui_system.h  dawn_vertex.cpp  dawn_vertex.h  game_object.cpp  game_object.h  shader_program_table.cpp  shader_program_table.h
HelloWorld/src/editor/: prefabs.cpp  prefabs.h
HelloWorld/src/graphics_layer/: gl_allocator.h  gl_render_object.cpp  gl_render_object.h  gl_shader_program.cpp  gl_shader_program.h  gl_texture.h  gl_uniform_buffer.cpp  gl_uniform_buffer.h
HelloWorld/src/modules/: CMakeLists.txt  base_module.cpp  base_module.h  collider_module.cpp  collider_module.h  light_module.cpp  light_module.h  mesh_module.cpp  mesh_module.h  renderer_module.cpp  renderer_module.h  transform_module.cpp  transform_module.h
HelloWorld/src/utils/: CMakeLists.txt  collision_detection.h  gl_transformer.h  glsl_utils.h  resource_loader.h
OpenglTemplate/: CMakeLists.txt
OpenglTemplate/src/: main.cpp
hello-world/: CMakeLists.txt
hello-world/glsl/: fragment_shader.glsl  vertex_shader.glsl
hello-world/include/: Camera.h  ElementBufferObject.h  Mesh.h  ShaderProgram.h  Texture.h  VertexArrayObject.h  VertexBufferObject.h  ZWEngine.h  imgui_impl_opengl3.h  stb_image.h
hello-world/src/: Camera.cpp  ElementBufferObject.cpp  Mesh.cpp  ShaderProgram.cpp  Texture.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp  ZWEngine.cpp  custom_func.cpp  glad.c  main.cpp  stb_image.cpp
hello_triangle/: .clang-format  CMakeLists.txt
hello_triangle/include/: CMakeLists.txt  OpenGLApplication.cpp  OpenGLApplication.h  ShaderProgram.cpp  ShaderProgram.h  VertexArrayObject.cpp  VertexArrayObject.h
hello_triangle/src/: OpenGLApplication.cpp  ShaderProgram.cpp  VertexArrayObject.cpp  main.cpp
opengl_clion_template/: CMakeLists.txt
opengl_clion_template/src/: glad.c  main.cpp
template/: CMakeLists.txt
template/include/glad/: glad.h
template/src/: glad.c  main.cpp
